--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -559,7 +559,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "When you have the right images it is time to generate and view the flood extents."
+    "When you have the right images it is time to generate and view the flood extents. As a reference the JRC water occurrence is added as a layer to the map as well."
    ]
   },
   {
