added ee.authenticate in notebook

--- a/notebooks/hydrafloods_example.ipynb
+++ b/notebooks/hydrafloods_example.ipynb
@@ -1,17 +1,6 @@
 {
  "cells": [
   {
-   "cell_type": "code",
-   "execution_count": 1,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "import ee\n",
-    "from EO_Floods.floodmap import FloodMap\n",
-    "ee.Initialize(project=\"ee-tjallingdejong-em\") # supply your own earth engine project"
-   ]
-  },
-  {
    "cell_type": "markdown",
    "metadata": {},
    "source": [
@@ -30,6 +19,27 @@
    "metadata": {},
    "source": [
     "First, initialize a FloodMap object. Give the start date and end date of the period that we are interested in. The geometry should be a bounding box in the form of a list of coordinates ([xmin, ymin, xmax, ymax]). Then the name of a dataset should be given. It is also possible to use multiple datasets, this can be done by giving a list of dataset names. Lastly a provider needs to be given. For now only hydrafloods is supported."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import ee\n",
+    "\n",
+    "ee.Authenticate()\n",
+    "ee.Initialize(project=\"ee-tjallingdejong-em\") # supply your own earth engine project"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from EO_Floods.floodmap import FloodMap"
    ]
   },
   {
